--- a/package.json
+++ b/package.json
@@ -54,14 +54,16 @@
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
+    "imapflow": "^1.0.184",
     "immer": "latest",
     "input-otp": "1.4.1",
     "isomorphic-dompurify": "^2.22.0",
     "lucide-react": "^0.454.0",
+    "mailparser": "^3.7.2",
     "next": "15.1.0",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
-    "nodemailer": "latest",
+    "nodemailer": "^6.10.0",
     "prisma": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
