--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "latest",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -47,6 +47,7 @@
     "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/imap": "^0.8.42",
     "@types/react": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
+    "imap": "^0.8.19",
     "imapflow": "^1.0.184",
     "immer": "latest",
     "input-otp": "1.4.1",
