feat: add Sparkles and Marquee components, enhance landing page with new features

--- a/package.json
+++ b/package.json
@@ -44,18 +44,22 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@tabler/icons-react": "^3.31.0",
     "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@types/imap": "^0.8.42",
     "@types/react": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cobe": "^0.6.3",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
