--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
     "@hookform/resolvers": "^3.9.1",
+    "@icons-pack/react-simple-icons": "^12.2.0",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -69,8 +70,9 @@
     "immer": "latest",
     "input-otp": "1.4.1",
     "isomorphic-dompurify": "^2.22.0",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.482.0",
     "mailparser": "^3.7.2",
+    "motion": "^12.5.0",
     "next": "15.1.0",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
@@ -84,7 +86,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0",
     "tiptap": "^1.32.2",
