--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next-auth": "latest",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.37.1",
     "prisma": "latest",
     "react": "^19",
