--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -91,6 +91,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0",
     "tiptap": "^1.32.2",
+    "twilio": "^5.5.0",
     "typescript": "latest",
     "use-sync-external-store": "latest",
     "vaul": "^0.9.6",
