--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "twilio": "^5.5.0",
     "typescript": "latest",
     "use-sync-external-store": "latest",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "zustand": "latest"
