--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@auth/prisma-adapter": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@icons-pack/react-simple-icons": "^12.2.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
