--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tsparticles/slim": "^3.8.1",
     "@types/imap": "^0.8.42",
     "@types/react": "latest",
+    "appwrite": "^17.0.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
