--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@auth/prisma-adapter": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@icons-pack/react-simple-icons": "^12.2.0",
-    "@prisma/client": "latest",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -80,7 +80,7 @@
     "nodemailer": "^6.10.0",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.1",
-    "prisma": "latest",
+    "prisma": "^6.5.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
