--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "migrate:postgres": "prisma migrate dev --name mongodb-to-postgresql",
+    "migrate:data": "ts-node scripts/migrate-data.ts",
+    "check:mongo-deps": "ts-node scripts/check-mongodb-dependencies.ts"
   },
   "dependencies": {
     "@auth/core": "latest",
@@ -63,6 +66,7 @@
     "cmdk": "1.0.4",
     "cobe": "^0.6.3",
     "date-fns": "latest",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
     "i": "^0.3.7",
@@ -73,12 +77,14 @@
     "isomorphic-dompurify": "^2.22.0",
     "lucide-react": "^0.482.0",
     "mailparser": "^3.7.2",
+    "mongodb": "^6.5.0",
     "motion": "^12.5.0",
     "next": "15.1.0",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "ogl": "^1.0.11",
+    "pg": "^8.11.3",
     "postprocessing": "^6.37.1",
     "prisma": "^6.5.0",
     "react": "^19",
@@ -103,8 +109,10 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/pg": "^8.11.0",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2"
   }
 }
