--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@sendgrid/mail": "^8.1.4",
     "@tabler/icons-react": "^3.31.0",
     "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-link": "^2.11.5",
