--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "mailparser": "^3.7.2",
     "mongodb": "^6.5.0",
     "motion": "^12.5.0",
-    "next": "15.1.0",
+    "next": "^15.2.4",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
