--- a/package.json
+++ b/package.json
@@ -70,12 +70,14 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
+    "fuse.js": "^7.1.0",
     "i": "^0.3.7",
     "imap": "^0.8.19",
     "imapflow": "^1.0.184",
     "immer": "latest",
     "input-otp": "1.4.1",
     "isomorphic-dompurify": "^2.22.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.482.0",
     "mailparser": "^3.7.2",
     "mongodb": "^6.5.0",
@@ -91,6 +93,7 @@
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-highlight-words": "^0.21.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
