--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@tsparticles/slim": "^3.8.1",
     "@types/imap": "^0.8.42",
     "@types/react": "latest",
+    "@upstash/redis": "^1.34.6",
+    "@vercel/kv": "^3.0.0",
     "appwrite": "^17.0.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
