--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --no-engine && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --no-engine",
     "migrate:postgres": "prisma migrate dev --name mongodb-to-postgresql",
     "migrate:data": "ts-node scripts/migrate-data.ts",
     "check:mongo-deps": "ts-node scripts/check-mongodb-dependencies.ts"
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@icons-pack/react-simple-icons": "^12.2.0",
     "@prisma/client": "^6.5.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
