--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "check:mongo-deps": "ts-node scripts/check-mongodb-dependencies.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.7",
+    "@ai-sdk/react": "^1.2.6",
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
     "@hookform/resolvers": "^3.9.1",
@@ -63,6 +65,7 @@
     "@types/react": "latest",
     "@upstash/redis": "^1.34.6",
     "@vercel/kv": "^3.0.0",
+    "ai": "^4.3.0",
     "appwrite": "^17.0.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -115,6 +118,7 @@
     "zustand": "latest"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^22",
     "@types/pg": "^8.11.0",
     "@types/react-dom": "^19",
