--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/react": "^1.2.6",
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
+    "@geist-ui/core": "^2.3.8",
     "@hookform/resolvers": "^3.9.1",
     "@icons-pack/react-simple-icons": "^12.2.0",
     "@prisma/client": "^6.6.0",
@@ -42,7 +43,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
@@ -53,6 +54,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@sendgrid/mail": "^8.1.4",
     "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
@@ -77,6 +79,8 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.6.3",
     "fuse.js": "^7.1.0",
+    "geist": "^1.3.1",
+    "geist-ui": "^0.0.102",
     "i": "^0.3.7",
     "imap": "^0.8.19",
     "imapflow": "^1.0.184",
