feat(discord): implement Discord account integration and messaging features
- Added API routes for managing Discord accounts, including linking, fetching, and deleting accounts.
- Implemented functionality for syncing direct messages and group chats from Discord.
- Introduced UI components for displaying and managing Discord accounts, enhancing user experience.
- Integrated middleware for real-time message handling and communication with Discord.
- Updated documentation to include setup instructions and usage guidelines for the Discord integration.

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "cmdk": "1.0.4",
     "cobe": "^0.6.3",
     "date-fns": "latest",
+    "discord.js": "^14.19.2",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.6.3",
