--- a/middleware/discord-middleware/Dockerfile
+++ b/middleware/discord-middleware/Dockerfile
@@ -3,7 +3,7 @@ FROM oven/bun:latest
 WORKDIR /app
 
 # Install dependencies
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN bun install --frozen-lockfile --production
 
 # Copy source code
