--- a/middleware/discord-middleware/package.json
+++ b/middleware/discord-middleware/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "postinstall": "bunx prisma generate --no-engine",
     "dev": "nodemon server.js",
     "start:cluster": "NODE_ENV=production node server.js"
   },
