chore(dependencies): update Prisma client and devDependency versions
- Upgraded the @prisma/client and prisma packages to version 6.7.0 in package.json to ensure compatibility with the latest features and improvements.

--- a/middleware/discord-middleware/package.json
+++ b/middleware/discord-middleware/package.json
@@ -10,7 +10,7 @@
     "start:cluster": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^6.7.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "prisma": "^5.0.0"
+    "prisma": "6.7.0"
   },
   "engines": {
     "node": ">=18.0.0"
