chore(middleware): update start scripts to use Bun for server execution
- Changed the start and start:cluster scripts in package.json to utilize Bun instead of Node.js for running the server, aligning with the project's updated execution environment.

--- a/middleware/discord-middleware/package.json
+++ b/middleware/discord-middleware/package.json
@@ -4,10 +4,10 @@
   "description": "Discord middleware for CommsSync",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "bun server.js",
     "postinstall": "bunx prisma generate --no-engine",
     "dev": "nodemon server.js",
-    "start:cluster": "NODE_ENV=production node server.js"
+    "start:cluster": "NODE_ENV=production bun server.js"
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
