chore(docker): optimize Dockerfile for Prisma client generation
- Updated the Dockerfile to copy both package.json and the prisma directory, ensuring all necessary files are included for dependency installation.
- Removed the redundant source code copy step, streamlining the build process.

--- a/middleware/discord-middleware/Dockerfile
+++ b/middleware/discord-middleware/Dockerfile
@@ -3,11 +3,8 @@ FROM oven/bun:latest
 WORKDIR /app
 
 # Install dependencies
-COPY package.json ./
+COPY package.json prisma ./
 RUN bun install --production
-
-# Copy source code
-COPY . .
 
 # Generate Prisma client
 RUN bunx prisma generate --no-engine
