fix(middleware): correct start script command in package.json
- Updated the start script in package.json to use "bun run server.js" instead of "bun server.js", ensuring proper execution of the server.

--- a/middleware/discord-middleware/package.json
+++ b/middleware/discord-middleware/package.json
@@ -4,7 +4,7 @@
   "description": "Discord middleware for CommsSync",
   "main": "server.js",
   "scripts": {
-    "start": "bun server.js",
+    "start": "bun run server.js",
     "postinstall": "bunx prisma generate --no-engine",
     "dev": "nodemon server.js",
     "start:cluster": "NODE_ENV=production bun server.js"
