--- a/middleware/discord-middleware/package.json
+++ b/middleware/discord-middleware/package.json
@@ -4,7 +4,7 @@
   "description": "Discord middleware for CommsSync",
   "main": "server.js",
   "scripts": {
-    "start": "bun run server.js",
+    "start": "node server.js",
     "postinstall": "bunx prisma generate --no-engine",
     "dev": "nodemon server.js",
     "start:cluster": "NODE_ENV=production bun server.js"
