--- a/middleware/discord-middleware/Dockerfile
+++ b/middleware/discord-middleware/Dockerfile
@@ -3,8 +3,10 @@ FROM oven/bun:latest
 WORKDIR /app
 
 # Install dependencies
-COPY package.json prisma ./
+COPY package.json ./
 RUN bun install --production
+
+COPY . .
 
 # Generate Prisma client
 RUN bunx prisma generate --no-engine
