--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
     "@geist-ui/core": "^2.3.8",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^5.0.1",
     "@icons-pack/react-simple-icons": "^12.2.0",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
@@ -70,6 +70,7 @@
     "ai": "^4.3.0",
     "appwrite": "^17.0.1",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -86,6 +87,7 @@
     "imapflow": "^1.0.184",
     "immer": "latest",
     "input-otp": "1.4.1",
+    "install": "^0.13.0",
     "isomorphic-dompurify": "^2.22.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.482.0",
@@ -118,7 +120,7 @@
     "use-sync-external-store": "latest",
     "uuid": "^11.1.0",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
+    "zod": "^3.24.4",
     "zustand": "latest"
   },
   "devDependencies": {
