feat(privacy): enhance legal pages with new Book component and background styles
- Added a new Book component to the Privacy Policy and Terms of Service pages for improved visual presentation.
- Introduced custom background gradients in the Tailwind configuration for enhanced aesthetics.
- Updated package.json to include the dicons library for additional icon support.
- Removed the deprecated Navbar1 component to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "cmdk": "1.0.4",
     "cobe": "^0.6.3",
     "date-fns": "latest",
+    "dicons": "^1.1.7",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.10.0",
