feat(hero): add HeroSection component and update landing page
- Introduced a new HeroSection component for enhanced visual presentation on the landing page.
- Updated package.json to include the @splinetool/react-spline library for additional functionality.
- Upgraded lucide-react version for improved icon support.
- Refactored the landing page to utilize the new HeroSection, simplifying the structure and enhancing maintainability.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "@sendgrid/mail": "^8.1.4",
+    "@splinetool/react-spline": "^4.0.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-highlight": "^2.11.5",
@@ -91,7 +92,7 @@
     "install": "^0.13.0",
     "isomorphic-dompurify": "^2.22.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.482.0",
+    "lucide-react": "^0.508.0",
     "mailparser": "^3.7.2",
     "mongodb": "^6.5.0",
     "motion": "^12.5.0",
